--- a/mod4_sol/src/template/items.template.html
+++ b/mod4_sol/src/template/items.template.html
@@ -3,7 +3,7 @@
 <h3>List of items</h3>
 <ul>
 <li ng-repeat= 'item in mainItemsList.items'>
-{{item.name}}-->
+{{item.name}} <br/>
 {{item.description}}
 
 </li>
